--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -41,12 +41,8 @@ contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/Twitter'
-  - icon: skype
-    icon_pack: fab
-    name: Skype Me
-    link: 'skype:echo123?call'
-  
+    link: 'https://twitter.com/PanosChatz1'
+ 
 
 # Site header
 
