--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: chatzinpn@phed-sr.auth.gr
+#email: chatzinpn@phed-sr.auth.gr
 # phone: 888 888 88 88
 # address:
  # street: 450 Serra Mall
@@ -38,6 +38,10 @@ email: chatzinpn@phed-sr.auth.gr
  # - 'Wednesday 09:00 to 10:00'
 #appointment_url: 'https://calendly.com'
 contact_links:
+  - icon: envelope
+    icon_pack: fas
+    name: Email Me
+    link: "mailto:chatzinpn@phed-sr.auth.gr" 
   - icon: twitter
     icon_pack: fab
     name: DM Me
