--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@
 
 title: Panagiotis Chatzinikolaou # Website name
 baseurl: 'https://panagiotis-chatzinick.netlify.app/' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+copyright: '© {2021} Panagiotis Chatzinikolaou' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
